<resources>
    <string name="app_name">RecipeMate</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="serves_4">Serves 4</string>
    <string name="ready_in_30_mins">Ready in 30 mins</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="todo">TODO</string>
    <string name="try_a_different_search_term">Try a different search term</string>
    <string name="no_recipes_found">No Recipes Found</string>
    <string name="no_results">No results</string>
    <string name="enter_ingredients_cuisine_or_dish_name">Enter ingredients, cuisine, or dish name</string>
    <string name="search_for_recipes">Search for Recipes</string>
    <string name="search_recipes">Search recipes</string>
    <string name="welcome_to_recipemate">Welcome to RecipeMate!</string>
    <string name="discover_save_and_share_your_favorite_recipes">Discover, save, and share your favorite recipes</string>
    <string name="start_saving_your_favorite_recipes">Start saving your favorite recipes!</string>
    <string name="no_favorites_yet">No Favorites Yet</string>
    <string name="no_favorites">No favorites</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="full_name">Full Name</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>


    <string name="help_amp_support"><![CDATA[Help & Support]]></string>




    <string name="settings">Settings</string>

    <string name="recipes_tried">Recipes Tried</string>
    <string name="favorites">Favorites</string>

    <string name="profile_picture">Profile picture</string>
    <string name="legend">Legend</string>
    <string name="recipemate">RecipeMate</string>
    <string name="cooking_time_30_min">Cooking Time: 30 min</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="you_haven_t_added_any_favorites_yet">You haven\'t added any favorites yet</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="grocery_list">Grocery List</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="facebook">facebook</string>
    <string name="google">google\n</string>
    <string name="facebook_app_id">YOUR_FACEBOOK_APP_ID\n</string>
    <string name="facebook_client_token">facebook_client_token\n</string>
    <string name="fb_login_protocol_scheme">fb123456789012345</string>
    <string name="logout">Logout</string>
    <string name="todO">TODO</string>
    <string name="about_recipemate">About RecipeMate</string>
    <string name="about">About</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="toDo">TODO</string>
    <string name="help_and_support">Help and support</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="Todo">TODO</string>
    <string name="privacy_settingS">Privacy settings</string>
    <string name="data_saver">Data Saver</string>
    <string name="data_saveR">Data saver</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_modE">Dark mode</string>
    <string name="notifications">Notifications</string>
    <string name="notificationS">Notifications</string>
    <string name="app_settings">App Settings</string>
    <string name="tOdo">TODO</string>
    <string name="dietary_preferences">Dietary Preferences</string>
    <string name="dietary_preferenceS">Dietary preferences</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_profiles">Edit Profile</string>
    <string name="todos">TODO</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="day_streak">Day Streak</string>
    <string name="_7">-7</string>
    <string name="recipes_trieD">Recipes Tried</string>
    <string name="_0">0</string>
    <string name="favoriteS">Favorites</string>
    <string name="member_since_2024">Member since 2024</string>
    <string name="user_example_com">user@example.com</string>
    <string name="user_name">User Name</string>
    <string name="_0_">0</string>
    <string name="profile_picturE">Profile picture</string>
    <string name="display_name">Display Name</string>
    <string name="change_photo">Change Photo</string>
    <string name="photo_changing_feature_coming_soon">Photo changing feature coming soon!</string>
    <string name="recipe_details">recipe_details\n</string>

    <!-- Add these to your existing strings -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Language Selection -->
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="afrikaans" translatable="false">Afrikaans</string>
    <string name="language_setting">Language Settings</string>


</resources>